adapt tableplotgui to atom table data